# MyBooks

MyBooksSrv/: .gitignore  ChangeLog.md  MyBooksSrv.cabal  README.md  config.json  defaultData.json  package.yaml
MyBooksSrv/app/: Main.hs
MyBooksSrv/src/DomainModels/: Book.hs  DefaultData.hs  Person.hs  PersonImport.hs
MyBooksSrv/src/MyBooksSrv/: Config.hs  MyBooksSrv.hs
MyBooksSrv/src/Repositories/: DbError.hs  DefaultDataRepository.hs  PersonRepository.hs  SqliteDb.hs  SqliteM.hs
MyBooksSrv/src/Utilities/: File.hs  Ordering.hs  SqliteDb.hs
mybooks-app/: .angular-cli.json  README.md  package.json  tsconfig.json
mybooks-app/e2e/: app.e2e-spec.ts  app.po.ts
mybooks-app/src/: index.html
mybooks-app/src/app/: app.component.html  app.module.ts  app.routes.ts
mybooks-app/src/app/authors/: authors.component.html  authors.component.ts
mybooks-app/src/app/books/: books.component.html  books.component.ts  books.service.ts
mybooks-app/src/app/home/: home.component.html  home.component.ts
mybooks-srv/: .gitignore  MyBook  README.md  config_.json  defaultData.json  mybooks-srv.cabal  stack.yaml
mybooks-srv/app/: Main.hs
mybooks-srv/src/MyBooksSrv/: BookRepository.hs  Config.hs  DbModels.hs  DbRepository.hs  DomainModels.hs  FieldDataType.hs  ImportData.hs  MyBooksSrv.hs  MySql.hs  PersonRepository.hs  Utilities.hs
