name:                mybooks-srv
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mybooks-srv#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  
  exposed-modules:     
    MyBooksSrv.DbModels, 
    MyBooksSrv.MySql,
    MyBooksSrv.Config,
    MyBooksSrv.MyBooksSrv
    
  build-depends:       
    base >= 4.7 && < 5, 
    persistent -any, 
    persistent-template -any, 
    text -any, 
    persistent-mysql -any,
    monad-logger -any,
    yesod -any,
    aeson -any,
    bytestring -any,
    resource-pool -any,
    monad-logger -any
    
  default-language:    Haskell2010

executable mybooks-srv
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mybooks-srv
  default-language:    Haskell2010

test-suite mybooks-srv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mybooks-srv
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mybooks-srv
